# github-statistics-dataset-builder

./: .gitignore  README.md  pyproject.toml
commands/: extract_stats.py
src/github_stats/: cli.py  extractor.py  languages.py
